Fixed some part of tasks

--- a/submissions/justdevway/friends-app/index.html
+++ b/submissions/justdevway/friends-app/index.html
@@ -162,10 +162,12 @@
 <div class="container">
     <div class="cards">
         <div class="cards__container">
-            <ul class="cards__list js-card__list"></ul>
+            <div class="cards__main_content js-cards__main_content">
+                <ul class="cards__list js-card__list"></ul>
+            </div>
             <div class="cards__pagination">
                 <div class="pagination">
-                    <ul class="pagination__list js-pagination__list"></ul>
+                    <div class="pagination__main_content js-pagination__main_content"></div>
                 </div>
             </div>
         </div>
