update memory-pair game task

--- a/submissions/allykrupina/memory-pair-game/index.html
+++ b/submissions/allykrupina/memory-pair-game/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="game" class="game">
-            <p class="result">Your result: <span id="result"></span></p>
+            <p class="result">Your result: <span id="result">0</span></p>
         </div>
     </body>
     <script src="js/main.js"></script>
