--- a/submissions/vladk96/js-dom/index.html
+++ b/submissions/vladk96/js-dom/index.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DOM task | Big Cats</title>
-    <!-- Roboto font from google-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <!-- normalize file -->
     <link rel="stylesheet" href="css/normalize.css">
-    <!-- my style file -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <a class="menu-button" href="#">
+    <button class="menu-button">
         <img src="images/menu.svg" alt="menu">
-    </a>
+    </button>
     <nav class="navigation">
-        <a class="menu-close" href="#">
+        <button class="menu-close">
             <img src="images/cancel-menu.svg" alt="menu">
-        </a>
+        </button>
     </nav>
     <main class="main"></main>
 
