Fix small issues

--- a/submissions/rrrds/memory-pair-game/index.html
+++ b/submissions/rrrds/memory-pair-game/index.html
@@ -17,7 +17,7 @@
     <div class="playfield"></div>
 
     <div class="finish-modal finish-modal--hide">
-      <h2>well done!</h2>
+      <h2 class="greetings-text">well done!</h2>
       <button class="finish-modal__button">restart</button>
     </div>
 
