--- a/submissions/alexdefender/js-dom-side-menu/index.html
+++ b/submissions/alexdefender/js-dom-side-menu/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container clearfix">
         <div class="menu">
             <ul class="menu-list">
                 <li class="menu-title">Оттенки зеленого цвета:</li>
@@ -19,7 +19,7 @@
                 <li class="menu-item-5">Зеленый цвет 05</li>
             </ul>
         </div>
-        <div class="content">  
+        <div id="content">
         </div>
     </div>
     <script src="js/js.js"></script>
