--- a/submissions/maxovsanyuk/Friends-App/index.html
+++ b/submissions/maxovsanyuk/Friends-App/index.html
@@ -11,9 +11,9 @@
     <title>Friends App</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="logo"><img src="img/travel.png" width="45px" height="45px"></div>
-        <p>Find Your Next Travel Friend</p>
+        <h2>Find Your Next Travel Friend</h2>
     </header>
     <aside id="sortBar">
         <div class="sortBarBtn" id="sortBarBtn">
@@ -48,7 +48,7 @@
 
             </div>
             <div class="aside-btn">
-                    <p></span>Age</p>
+                    <p>Age</p>
 
                     <label><input type="radio" class="form-radio" name="sort-by-age" id="sort-by-age-up"></input></label>
                     <label for="sort-by-age-up"><span>&#8679;</span></label>
