Edit for req changes 1

--- a/submissions/denislukianenko/friends-app/index.html
+++ b/submissions/denislukianenko/friends-app/index.html
@@ -18,15 +18,9 @@
         </div>
         <div class="header-group">
           <b>FILTER BY:</b>
-          <input
-            id="name-filter"
-            onchange="filterUsers(this)"
-            type="text"
-            placeholder="Name"
-          />
+          <input id="name-filter" type="text" placeholder="Name" />
           <input
             id="age-filter"
-            onblur="filterUsers(this)"
             type="number"
             placeholder="Age"
             min="21"
