--- a/submissions/RomanovAleksander/friends-app/index.html
+++ b/submissions/RomanovAleksander/friends-app/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Friends app</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Friends App</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <header class="header">Find your friends</header>
@@ -16,7 +18,7 @@
             </label>
         </div>
         <div id="gender">
-            <p class="filter-name" >Gender</p>
+            <p class="filter-name">Gender</p>
             <label><input class="radio-box" type="radio" name="gender" value="all" checked>All</label>
             <label><input class="radio-box" type="radio" name="gender" value="male">Male</label>
             <label><input class="radio-box" type="radio" name="gender" value="female">Female</label>
@@ -34,6 +36,6 @@
     </section>
     <div class="content"></div>
 </div>
-<script src="index.js"></script>
 </body>
+<script src="./index.js"></script>
 </html>
