Edit for requested changes 2

--- a/submissions/denislukianenko/friends-app/index.html
+++ b/submissions/denislukianenko/friends-app/index.html
@@ -13,8 +13,8 @@
       <img class="logo" src="logo.svg" alt="" />
       <div class="header-switches">
         <div class="header-group">
-          <b>SWITCH ORDER:</b> <button onclick="toggleAges(this)">99→1</button>
-          <button onclick="toggleAlphabeticOrder(this)">Z→A</button>
+          <b>SWITCH ORDER:</b> <button id="age-toggle">99→1</button>
+          <button id="abc-toggle">Z→A</button>
         </div>
         <div class="header-group">
           <b>FILTER BY:</b>
