updated memory-pair-game after review

--- a/submissions/AlexNugda/memory-pair-game/index.html
+++ b/submissions/AlexNugda/memory-pair-game/index.html
@@ -16,135 +16,87 @@
 		</header> 
 		
 		<div id="game-container">
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front">	</div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 			
-			<div class="flip-container" ontouchstart="this.classList.toggle('selected-card');">
+			<div class="flip-container">
 				<div class="flipper">
-					<div class="front">
-						<!-- front content -->
-					</div>
-					<div class="back">
-						<!-- back content -->
-					</div>
+					<div class="front"> </div>
+					<div class="back"> </div>
 				</div>
 			</div>
 		</div>
