transfer of repeated HTML to JS

--- a/submissions/AlexNugda/memory-pair-game/index.html
+++ b/submissions/AlexNugda/memory-pair-game/index.html
@@ -9,98 +9,13 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-
-	<main >
-		<header>
-		  <h1>Memory pair game</h1>
-		</header> 
-		
-		<div id="game-container">
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front">	</div>
-					<div class="back"> </div>
-				</div>
-			</div>
+		<main >
+			<header>
+			  <h1>Memory pair game</h1>
+			</header> 
 			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-			
-			<div class="flip-container">
-				<div class="flipper">
-					<div class="front"> </div>
-					<div class="back"> </div>
-				</div>
-			</div>
-		</div>
-	</main>
+			<div id="game-container">	</div>
+		</main>
 	<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
