--- a/submissions/bugagashinka/friends-app/index.html
+++ b/submissions/bugagashinka/friends-app/index.html
@@ -12,11 +12,10 @@
     />
   </head>
   <body>
-    <head></head>
     <main class="wrapper">
       <section id="filter">
         <h2>Filter:</h2>
-        <hr />
+        <div class="line"></div>
         <div class="search">
           <input type="search" placeholder="Search" size="30" />
           <select class="search-by" id="search-type">
@@ -42,7 +41,7 @@
           <input type="range" min="21" max="75" value="75" id="age-range" />
         </div>
         <h2>Order:</h2>
-        <hr />
+        <div class="line"></div>
         <div class="filter-order">
           <div class="order-name">
             <h3>Name:</h3>
