--- a/submissions/vladk96/memory-pair-game/index.html
+++ b/submissions/vladk96/memory-pair-game/index.html
@@ -12,56 +12,9 @@
     <header>
         <h1>Merry Christmas!</h1>
     </header>
-    <div class="card-container">
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-        <div class="card">
-            <div class="front"></div>
-            <div class="back"></div>
-        </div>
-    </div>
+    <main class="main">
+        <div class="card-container"></div>
+    </main>
     <script src="js/app.js"></script>
 </body>
 </html>
