--- a/submissions/frostwolm/js-dom/index.html
+++ b/submissions/frostwolm/js-dom/index.html
@@ -6,24 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/app.css">
   <link rel="shortcut icon" href="">
-  <title>Dom project</title>
+  <title>Dom Project</title>
 </head>
 <body>
   <div class="container">
     <nav class="menu">
-      <ul class="menu__list">
-      </ul>
     </nav>
     <main>
       <article class="text">
       </article>
     </main>
   </div>
-  <script type="text/javascript">
-    document.addEventListener(`DOMContentLoaded`, function () {
-      contentController.init(document.querySelector(`nav.menu`), document.querySelector(`article.text`));
-    });
-  </script>
   <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
