Correct bugs pull request #302 - js-dom-menu

--- a/submissions/patrofimov/js-dom/index.html
+++ b/submissions/patrofimov/js-dom/index.html
@@ -1,56 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Симпсоны</title>
-  <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css\main.css">
-  <link rel="stylesheet" type="text/css" href="css\responsive.css">
-   
-</head>
-
-<body>
-
-<header class="header">
-      <div class="header__inner">
-        
-        <h1 class="header__title">
-          Симпсоны
-        </h1>
-        <a id="menu" class="header__menu">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
-          </svg>
-        </a>
-      </div>
-    </header>
-	
-	<nav id="drawer" class="nav">
-      <ul class="nav__list">
-        <li class="nav__item">
-		<a href="#" class="menu__link menu__link--active" data-order="1">
-    Гомер
-     </a></li><br>
-        <li class="nav__item"><a href="#" class="menu__link" data-order="2">
-    Барт
-     </a></li><br>
-        <li class="nav__item"><a href="#" class="menu__link" data-order="3">
-    Мардж
-     </a></li><br>
-        <li class="nav__item"><a href="#" class="menu__link" data-order="4">
-    Лиза
-    
-  </a></li><br>
-      </ul>
-    </nav>
-	
-	 <main>
-     </main>
-<script src="js/script.js"></script>
-  
-</body>
-
+<html>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>Симпсоны</title>
+      <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,600,700" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+      <link rel="stylesheet" type="text/css" href="css\main.css">
+	  <link rel="stylesheet" type="text/css" href="css\responsive.css">
+   </head>
+   <body>
+      <header class="header">
+         <div class="header__inner">
+            <h1 class="header__title">
+               Симпсоны
+            </h1>
+            <a id="menu" class="header__menu">
+               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
+               </svg>
+            </a>
+         </div>
+      </header>
+      <nav id="drawer" class="nav">
+         <ul class="nav__list">
+            <li class="nav__item">
+               <a href="#" class="menu__link menu__link--active" data-order="1">
+               Гомер
+               </a>
+            </li>
+            <li class="nav__item"><a href="#" class="menu__link" data-order="2">
+               Барт
+               </a>
+            </li>
+            <li class="nav__item"><a href="#" class="menu__link" data-order="3">
+               Мардж
+               </a>
+            </li>
+            <li class="nav__item"><a href="#" class="menu__link" data-order="4">
+               Лиза
+               </a>
+            </li>
+         </ul>
+      </nav>
+      <main class="main">
+      </main>
+      <script src="js/script.js"></script>
+   </body>
 </html>
