Fix empty space between cards

--- a/submissions/CuteShaun/friends-app/index.html
+++ b/submissions/CuteShaun/friends-app/index.html
@@ -49,7 +49,9 @@
           </div>
         </aside>
 
-        <main class="person-list" id="main"></main>
+        <main class="person-list" id="main">
+          <div class="person-list__container" id="card-container"></div>
+        </main>
       </div>
     </div>
     <script src="js/script.js"></script>
