update css class name

--- a/submissions/webdevagent/memory-pair-game/index.html
+++ b/submissions/webdevagent/memory-pair-game/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Memory Cat Game</h1>
-  <div class="catGallery"></div>
+  <div class="cat-gallery"></div>
   <h2 class="restart">RESTART</h2>
 
 
