add mobile version

--- a/submissions/iamsokol/friends-app/index.html
+++ b/submissions/iamsokol/friends-app/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My Friends List</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
         <link rel="stylesheet" href="main.css">
@@ -11,6 +12,11 @@
         <header class="header">
             <h1>My Friends List</h1>
         </header>
+        <div class="menu-button" id="menuButton">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div id="filterBlock" class="filter">
             <div id="radioGender" class="sortgender">
                 <p>Sort by sex</p>
