update some features

--- a/submissions/iamsokol/friends-app/index.html
+++ b/submissions/iamsokol/friends-app/index.html
@@ -49,8 +49,7 @@
             </div>
             <button id="elementDrop" class="drop">Reset</button>
         </div>
-        <div class="main">
-            <div id="mainBlock" class="friends"></div>
+        <div class="main" id="main">
             <div id="infoBlock" class="result"></div>
         </div>
         <script src="script.js"></script>
