fix changes requested

--- a/submissions/olencha/js-dom/index.html
+++ b/submissions/olencha/js-dom/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="app">
-    <header><h1>5 Best Books to Learn JavaScript</h1></header>
+    <header><h1 class="page-title">5 Best Books to Learn JavaScript</h1></header>
     <div class="container">
         
         <nav id="books-list" class="books-list">
