add inputmode into html

--- a/submissions/OlgaDubynka/friends-app/index.html
+++ b/submissions/OlgaDubynka/friends-app/index.html
@@ -56,7 +56,7 @@
               <button type="button" class="search-name-btn search-btn">search</button>
             </div>
             <div class="search-age search-box">
-              <input class="search-by-age search-input" type="number" placeholder="Search by age..."></input>
+              <input class="search-by-age search-input" type="number" inputmode="numeric" placeholder="Search by age..."></input>
               <button type="button" class="search-age-btn search-btn">search</button>
             </div>
             <div class="search-box">
