change after review

--- a/submissions/vadymkotlyarenko/js-dom/Index.html
+++ b/submissions/vadymkotlyarenko/js-dom/Index.html
@@ -11,13 +11,13 @@
         <link rel="shortcut icon" href="https://d3j2s6hdd6a7rg.cloudfront.net/v2/JE-91/lfc/images/favicon.png" type="image/png">    
     </head>
     <body>
-        <header>
+        <header class = "header">
             <h1>Liverpool FC</h1>
         </header>
-        <section>
-            <div  class="menu">
+        <div class = "mainContent">
+            <div class = "menu">
                 <h2>Information</h2>
-                <ul class="menu-list">
+                <ul id = "menu-list">
                     <li ><a href="#">About</a></li>                           
                     <li ><a href="#">Stadium</a></li>
                     <li ><a href="#">Anthem</a></li>
@@ -31,6 +31,6 @@
                     the top tier of English football. The club has won 5 European Cups, more than any other English club, 3 UEFA Cups, 3 UEFA Super Cups, 18 League titles, 
                     7 FA Cups, a record 8 League Cups, and 15 FA Community Shields.</p>
             </div>            
-        </section>
+        </div>
   </body>
 </html>
