--- a/submissions/CrazyPike/DOM#6/sidemenu.html
+++ b/submissions/CrazyPike/DOM#6/sidemenu.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div id="menu"></div><div id="main"></div>
+<div id="wrapper" class="flex">
+    <nav class="menu">
+<ul id="menu" ></ul>
+    </nav>
+    <main id="main" class="content"></main>
+</div>
 <script src="index.js"></script>
 </body>
 </html>
+
