--- a/submissions/CrazyPike/DOM#6/sidemenu.html
+++ b/submissions/CrazyPike/DOM#6/sidemenu.html
@@ -6,7 +6,13 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div id="menu"></div><div id="main"></div>
+<div id="wrapper" class="flex">
+    <nav class="menu">
+<ul id="menu" ></ul>
+    </nav>
+    <main id="main" class="content"></main>
+</div>
 <script src="index.js"></script>
 </body>
 </html>
+
