--- a/submissions/OlgaDubynka/friends-app/index.html
+++ b/submissions/OlgaDubynka/friends-app/index.html
@@ -32,24 +32,36 @@
           <form id="form-filter">
             <div id="user-name" class="search-box">
               <span>Sort by name</span>
-              <input id="up-name" value="up-name" name="group-name" class="input-name-up" type="radio" />
-              <label for="up-name">A-Z</label>
-              <input  id="down-name" value="down-name" name="group-name" class="input-name-d" type="radio" />
-              <label for="down-name">Z-A</label>
+              <label for="up-name">
+                <input id="up-name" value="up-name" name="group-name" class="input-name-up" type="radio" />
+                A-Z
+              </label>
+              <label for="down-name">
+                <input  id="down-name" value="down-name" name="group-name" class="input-name-d" type="radio"/>
+                Z-A
+              </label>
             </div>
             <div id="user-age" class="search-box">
               <span>Sort by age</span>
-              <input id="up-age" name="group-age" class="input-age-up" type="radio" value="up-age"/>
-              <label for="up-age">1-9</label>
-              <input id="down-age" name="group-age" class="input-age-d" type="radio" value="down-age"/>
-              <label for="down-age">9-1</label>
+              <label for="up-age">
+                <input id="up-age" name="group-age" class="input-age-up" type="radio" value="up-age" />
+                1-9
+              </label>
+              <label for="down-age">
+                  <input id="down-age" name="group-age" class="input-age-d" type="radio" value="down-age"/>
+                  9-1
+              </label>
             </div>
             <div id="user-gender" class="search-box">
               <span>Filter by gender</span>
-              <input id="male" name="group-gender" class="input-gender input-male" type="radio" value="male" />
-              <label for="male">male</label>
-              <input id="female" name="group-gender" class="input-gender input-female" type="radio" value="female" />
-              <label for="female">female</label>
+              <label for="male">
+                  <input id="male" name="group-gender" class="input-gender input-male" type="radio" value="male" />
+                  male
+              </label>
+              <label for="female">
+                  <input id="female" name="group-gender" class="input-gender input-female" type="radio" value="female" />
+                  female
+              </label>
             </div>
             <div class="search-name search-box">
               <input class="search-by-name search-input" type="text" placeholder="Search by name..."></input>
