Updated JS-DOM after review

--- a/submissions/mazvira/js-dom/index.html
+++ b/submissions/mazvira/js-dom/index.html
@@ -10,16 +10,17 @@
     <title>Aside menu</title>
 </head>
 <body>
-<section class="content">
-    <aside class="navigation">
+<div class="content">
+    <aside class="nav">
         <ul>
-            <li class="active">Samsung</li>
+            <li class="active">Samsung </li>
             <li>Iphone 6</li>
             <li>Iphone XR</li>
             <li>Huawei</li>
         </ul>
     </aside>
-    <div class="main"></div>
-</section>
+    <div class="main"> </div>
+</div>
 </body>
 </html>
+
