Reworked with attributes

--- a/submissions/CrazyPike/DOM#6/sidemenu.html
+++ b/submissions/CrazyPike/DOM#6/sidemenu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>DOM Task 6</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
