--- a/submissions/alexdefender/friends-app/index.html
+++ b/submissions/alexdefender/friends-app/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
+    <h1>Friends App</h1>
     <div class="container">
         <div id="container-filters">
-            <!-- <div><input type="text" id="search" size="20" placeholder="Search">
-            </div> -->
+            <div class="text">Search:
+                <input type="text" id="search" size="20" placeholder="Search">
+            </div>
             <div class="text">Sort by age:
                 <input id="sort-age-up" class="sort-button" type="button" value="0-9">
                 <input id="sort-age-down" class="sort-button" type="button" value="9-0">
