--- a/submissions/webdevagent/friend-app-task/index.html
+++ b/submissions/webdevagent/friend-app-task/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
     <title></title>
 
     <link rel="stylesheet" href="style.css">
@@ -10,10 +11,6 @@
   <body>
     <div class='header'>
       <h1>Photographers</h1>
-      <div class='profile-card'>
-    <img 'profile-photo'></img>
-    <p class="profile-name"></p>
-  </div>
     <ul class="nav-bar">
       <li class="people">Photographers</li>
       <li class='home'>Home</li>
