Remove extra divs

--- a/submissions/webdevagent/friend-app-task/index.html
+++ b/submissions/webdevagent/friend-app-task/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
 
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet"
-  </head>
-  <body>
-    <div class='header'>
-      <h1>Photographers</h1>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" />
+  <title>Photographers</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet" </head> <body>
+  <div class='header'>
+    <h1>Photographers</h1>
     <ul class="nav-bar">
       <li class="people">Photographers</li>
       <li class='home'>Home</li>
@@ -18,49 +17,24 @@
       <li class='request'>Requests</li>
     </ul>
 
-    </div>
-    <p class="open">Open</p>
-    <div class="navigation">
-      <p class="hide">Hide</p>
-      <ul>
-    <li><input type="text" class="myInput" placeholder="Filter by names.."></li>
-    </ul>
-    <div class="abc">
-      <ul>
-      <li class="a-z">A-Z</p>
-      <li class="z-a">Z-A</p>
-    </ul>
-    </div>
-    <div class="gender">
-      <ul>
+  </div>
+  <p class="open">Open</p>
+  <div class="navigation">
+    <p class="hide">Hide</p>
+    <ul>
+      <li><input type="text" class="myInput" placeholder="Filter by names.."></li>
       <li class="male">Man</li>
       <li class="female">Woman</li>
-      <li class="both">Both</li>
-      <ul>
-    </div>
-    <div class="age">
-      <ul>
+      <li class="a-z">A-Z</li>
+      <li class="z-a">Z-A</li>
       <li class='full-age'>Age+</li>
       <li class='not-full'>Age-</li>
-      <ul>
-    </div>
-    <ul>
-    <li class="reset">reset</li>
-    <ul>
-    </div>
+      <li class="reset">reset</li>
+  </div>
 
-    <div class="friends"></div>
-    <div class='home-information'>
-      <h2>About this website</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <div class="gallery">
-    </div>
-    <div class='requests'>
-      <h2> Here you can see your sended friends Requests</h2>
-    </div>
-    <script src="index.js"></script>
+  <div class="friends"></div>
+  <div class='requests'></div>
+  <script src="index.js"></script>
   </body>
+
 </html>
